// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tickerExternalAgentActions should filter by caller DID 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserCreated",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserFrozen",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserUnfrozen",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserWindowModified",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserClosed",
        "palletName": "sto",
      },
    ],
  },
}
`;

exports[`tickerExternalAgentActions should filter by event id 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserFrozen",
        "palletName": "sto",
      },
    ],
  },
}
`;

exports[`tickerExternalAgentActions should filter by pallet name 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "ComplianceRequirementCreated",
        "palletName": "compliancemanager",
      },
    ],
  },
}
`;

exports[`tickerExternalAgentActions should return the transactions for ticker 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "IdentifiersUpdated",
        "palletName": "asset",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "Issued",
        "palletName": "asset",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupCreated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupPermissionsUpdated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xeb686d5391c1123fcd252419bc1e77b525f46bddc8964d34e74be0988c419fea",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "ComplianceRequirementCreated",
        "palletName": "compliancemanager",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentRemoved",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentRemoved",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupCreated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupPermissionsUpdated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupChanged",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserCreated",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserFrozen",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserUnfrozen",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserWindowModified",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "eventId": "FundraiserClosed",
        "palletName": "sto",
      },
    ],
    "totalCount": 18,
  },
}
`;
